--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  max-height: 100vh;
+  max-width: 100vw;
+  background-color: white;
+  color: rgb(32, 33, 36);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.post {
+  list-style: none;
+  max-height: 90vh;
+  max-width: 100vw;
+  margin-bottom: 2vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-item {
+  border: 2px solid rgb(95, 99, 104);
+  border-radius: 10px;
+  margin: 4vh auto;
+  padding: 1.5vh;
+}
+
+.page-item.active > span {
+  background-color: rgb(32, 33, 36) !important;
+  border-color: rgb(32, 33, 36) !important;
+  color: white !important;
+}
+
+.page-link {
+  color: rgb(32, 33, 36) !important;
 }
